# fTimer

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  TODO.md  fpm.toml
.claude/: settings.json
.github/: codex-review-roles.json  pull_request_template.md  review-bootstrap.md
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml  strategic-question.yml
.github/constraints/: lint.txt
.github/prompts/: README.md  adoptability-review.md  api-compat-review.md  build-portability-review.md  completion-audit-review.md  docs-contract-review.md  methodology-review.md  mpi-safety-review.md  performance-overhead-review.md  pragmatic-design-review.md  red-team-review.md  software-review.md  test-quality-review.md
.github/prompts/detailed/: README.md  adoptability-review.md  api-compat-review.md  build-portability-review.md  completion-audit-review.md  docs-contract-review.md  methodology-review.md  mpi-safety-review.md  performance-overhead-review.md  pragmatic-design-review.md  red-team-review.md  scope-budget.md  software-review.md  test-quality-review.md
.github/prompts/manual/: software-review.md
.github/workflows/: ci.yml  codex-review-coverage-refresh.yml  codex-review-coverage.yml  codex-review.yml  nvhpc-smoke.yml
bench/: CMakeLists.txt  check_bench_csv_error.cmake  check_bench_csv_output.cmake  ftimer_bench.F90
cmake/: fTimerConfig.cmake.in  install_ftimer_modules.cmake.in
docs/: agent-context.md  csv-schema.md  design.md  documentation-audience.md  fault-model-traceability.md  implementation-history.md  installed-api.md  maintainer.md  mpi-descriptor-preflight-decision.md  mpi-sparse-summary-decision.md  openmp-hybrid-api-design.md  openmp-hybrid-mpi-reduction-design.md  openmp-hybrid-strategy-decision.md  openmp-hybrid-summary-design.md  openmp-hybrid-validation-plan.md  openmp-thread-lane-runtime-design.md  openmp-timing-modes.md  package-manager-readiness.md  release-evidence.md  release-notes-v1.0.0.md  release-validation-v1.0.0.md  release.md  semantics.md  troubleshooting.md
docs/history/: README.md  first-hour-timing-mode-validation.md  mpi-sparse-summary-decision.md  openmp-hybrid-api-design.md  openmp-hybrid-mpi-reduction-design.md  openmp-hybrid-strategy-decision.md  openmp-hybrid-summary-design.md  openmp-hybrid-validation-plan.md  openmp-thread-lane-runtime-design.md
docs/plans/: issue-129-followup-plan.md
docs/templates/: pr-open.md  prompt-fallback-review.md  prompt-findings-disposition.md  prompt-implement-issue.md  prompt-milestone-audit.md  prompt-review-monitoring.md  session-handoff.md  task-planning.md
docs/workflows/: codex-review-flow.md  findings-disposition.md  issue-intake.md  pr-open.md  repo-bootstrap.md  review-monitoring.md
examples/: CMakeLists.txt  basic_usage.F90  instrumentation_facade_disabled.F90  instrumentation_facade_enabled.F90  instrumentation_facade_example.F90  mpi_example.F90  mpi_openmp_example.F90  nested_timers.F90  openmp_example.F90  openmp_worker_example.F90
scripts/: check_manual_fallback_audit.py  compare-benchmarks.py  context-load-analysis.sh  run-benchmark.sh  session-token-analysis.py  test_check_manual_fallback_audit.py
scripts/benchmark-prompts/: 01-coding-task.md  02-pr-open.md  03-review.md  04-contract-question.md  05-broad-orientation.md
src/: CMakeLists.txt  ftimer.F90  ftimer_clock.F90  ftimer_core.F90  ftimer_core_summary_bindings.F90  ftimer_csv_validation.F90  ftimer_mpi.F90  ftimer_openmp.F90  ftimer_openmp_reports.F90  ftimer_summary.F90  ftimer_types.F90
tests/: CMakeLists.txt  check_configure_contracts.cmake  check_csv_no_ierr_diagnostics.cmake  check_csv_schema_docs.cmake  check_example_smoke.cmake  check_init_contract_docs.cmake  check_installed_consumer_contract_meta.cmake  check_installed_openmp_hybrid_api_surface.cmake  check_installed_package_consumer.cmake  check_make_wrapper_contracts.cmake  check_mpi_lifecycle_contract_docs.cmake  check_openmp_api_diagnostics.cmake  check_openmp_api_ierr_silence.cmake  check_openmp_api_serial_diagnostics.cmake  check_openmp_hybrid_examples_contract.cmake  check_openmp_mpi_summary_smoke.cmake  check_openmp_mpi_union_descriptor_contract.cmake  check_openmp_option_off_global_flags.cmake  check_openmp_summary_smoke.cmake  check_public_symbol_allowlist.cmake  check_release_docs_contract.cmake  public_symbol_allowlist.txt  test_basic.pf  test_call_stack.pf  test_callbacks.pf  test_callcount.pf  test_context.pf  test_csv_no_ierr_diagnostics.F90  test_edge_cases.pf  test_file_output.pf  test_mpi_disabled.pf  test_nesting.pf  test_oop_scoped_guard.pf  test_openmp_api_diagnostics.F90  test_openmp_api_ierr_silence.F90  test_openmp_api_serial_diagnostics.F90  test_openmp_api_smoke.F90  test_openmp_guards.pf  test_openmp_mpi_disabled_smoke.F90  test_openmp_mpi_summary_3rank_smoke.F90  (+9 more)
tests/fixtures/csv-schema/: README.md  local-active-reader-aid.csv  mpi-openmp-strict-reader-aid.csv  mpi-openmp-union-mixed-epoch-reader-aid.csv  mpi-union-sparse-reader-aid.csv  openmp-mixed-epoch-reader-aid.csv  strict-mpi-reader-aid.csv
tests/install-consumer/: CMakeLists.txt  legacy_mpi_main.F90  main.F90  mixed_main.F90  mpi_main.F90  mpi_openmp_main.F90  oop_main.F90  openmp_api_main.F90  openmp_api_mpi_main.F90  openmp_api_mpi_openmp_main.F90  openmp_api_openmp_main.F90
tests/installed-consumer-contract/: consumer-build.cmake  consumer-run.cmake  contract-phases.cmake  installed-artifacts.cmake  mpi-openmp-diagnostics.cmake  package-version-probes.cmake  producer-install.cmake  setup.cmake  source-rejection-probes.cmake
tests/mpi/: CMakeLists.txt  test_mpi_consistency.pf  test_mpi_consistency_4pe.pf  test_mpi_summary.pf  test_mpi_summary_4pe.pf
tests/openmp-option-off-global-flags/: CMakeLists.txt  main.F90
